# trackforge

./: .cz.toml  .gitignore  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  codecov.yml  deny.toml  examples.html  index.html  mkdocs.yml  objects.inv  parameters.html  pyproject.toml  roadmap.html  search.json  taplo.toml  typos.toml
.cargo/: audit.toml
.github/: CODEOWNERS  TRACKER_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_tracker.yml
.github/workflows/: CI.yml  autofix.yml  codencov.yaml  docs.yml  mdbook.yml  pre-commit.yml  security-audit.yml
api/: index.html
api/trackers/: index.html
api/trackers/botsort/: index.html
api/trackers/byte_track/: index.html
api/trackers/common/: index.html
api/trackers/common/association/: index.html
api/trackers/common/byte_cascade/: index.html
api/trackers/common/cmc/: index.html
api/trackers/common/obs_track/: index.html
api/trackers/common/params/: index.html
api/trackers/deep_ocsort/: index.html
api/trackers/deepsort/: index.html
api/trackers/ocsort/: index.html
api/trackers/sort/: index.html
api/trackers/tracktrack/: index.html
api/traits/: index.html
api/types/: index.html
api/utils/: index.html
api/utils/assignment/: index.html
api/utils/features/: index.html
api/utils/geometry/: index.html
api/utils/kalman/: index.html
book/: 404.html  book.toml  examples.html  getting-started.html  index.html  introduction.html  parameters.html  print.html  searcher-09f2665d.js  searchindex-342e33bc.js  searchindex-446fce54.js  searchindex-5a4a5fdd.js  searchindex-5e669575.js  searchindex-a83d3524.js  searchindex-ac227132.js  searchindex-c4fc3d91.js  searchindex-c9ea982f.js  toc-54f69bf9.js  toc-6e4d93f5.js  toc-7c2eeb38.js  toc-ccffaf3c.js  toc.html
book/src/: SUMMARY.md  examples.md  getting-started.md  introduction.md  parameters.md
book/src/trackers/: botsort.md  byte_track.md  deep_ocsort.md  deepsort.md  index.md  ocsort.md  sort.md  tracktrack.md
book/trackers/: botsort.html  byte_track.html  deep_ocsort.html  deepsort.html  index.html  ocsort.html  sort.html  tracktrack.html
docs/: COMMIT_GUIDELINES.md  adding-a-tracker.md  examples.md  index.md  parameters.md  roadmap.md
docs/reference/: python.md
examples/: deepsort_ort.rs  deepsort_simple.rs  index.html
examples/python/: README.md  botsort_demo.py  byte_track_demo.py  common.py  deep_ocsort_demo.py  deepsort_demo.py  ocsort_demo.py  reid.py  sort_rtdetr_demo.py  sort_yolo_demo.py  tracker_comparison.py
examples/rust/: byte_track_demo.rs
parameters/: index.html
python/: trackforge.pyi
reference/: python.html
reference/python/: index.html
roadmap/: index.html
scripts/: commit_plan.sh  fix_docs.py  reformat_markdown.sh
src/: lib.rs  traits.rs
src/trackers/: mod.rs
src/trackers/botsort/: README.md  mod.rs
src/trackers/byte_track/: README.md  mod.rs
src/trackers/bytetrack/: mod.rs
src/trackers/common/: association.rs  byte_cascade.rs  cmc.rs  mod.rs  obs_track.rs  params.rs
src/trackers/deep_ocsort/: README.md  mod.rs  python.rs  track.rs  tracker.rs
src/trackers/deepsort/: README.md  mod.rs  nn_matching.rs  python.rs  track.rs  tracker.rs
src/trackers/ocsort/: README.md  mod.rs
src/trackers/sort/: README.md  mod.rs
src/trackers/tracktrack/: README.md  mod.rs
src/types/: mod.rs
src/utils/: assignment.rs  features.rs  geometry.rs  kalman.rs  mod.rs
tests/: cascade_parity.rs  test_botsort_scenarios.py  test_python_bindings.py
