[package]
name = "trackforge"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "trackforge"
crate-type = ["cdylib", "rlib"]

[dependencies]
image = "0.25.9"
pyo3 = { version = "0.18.1", features = ["extension-module"], optional = true }

[features]
default = []
python = ["dep:pyo3"]
