[package]
name = "trackforge"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "trackforge"
crate-type = ["cdylib", "rlib"]

[dependencies]
image = "0.25.9"
nalgebra = "0.33.0"
derive_more = "0.99.17"
anyhow = "1.0"
pyo3 = { version = "0.27.2", features = ["extension-module"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

[features]
default = []
python = ["dep:pyo3"]

[[example]]
name = "byte_track_demo"
path = "examples/rust/byte_track_demo.rs"
