[package]
name = "trackforge"
version = "0.1.8"
edition = "2024"
description = "A unified, high-performance computer vision tracking library."
rust-version = "1.85"
license = "MIT"
readme = "README.md"
repository = "https://github.com/onuralpszr/trackforge"
homepage = "https://github.com/onuralpszr/trackforge"
authors = ["Onuralp Sezer <thunderbirdtr@gmail.com>"]
documentation = "https://docs.rs/trackforge"
keywords = ["computer-vision", "tracking", "bytetrack", "kalman-filter"]
categories = ["computer-vision", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "trackforge"
crate-type = ["cdylib", "rlib"]

[dependencies]
image = { version = "0.25.9", default-features = false }
nalgebra = { version = "0.34.1", default-features = false, features = ["libm", "alloc"] } # libm needed for no_std math
thiserror = "2.0.7"
hashbrown = "0.15.2"
pyo3 = { version = "0.27.2", features = ["extension-module"], optional = true }

[features]
default = ["std"]
std = ["nalgebra/std", "nalgebra/default", "image/default"]
python = ["dep:pyo3", "std"] # Python requires std
advanced_examples = ["dep:ndarray", "dep:opencv", "dep:ort", "dep:usls", "std"]

[[example]]
name = "byte_track_demo"
path = "examples/rust/byte_track_demo.rs"
required-features = ["std"]

[[example]]
name = "deepsort_ort"
path = "examples/deepsort_ort.rs"
required-features = ["advanced_examples"]

[[example]]
name = "deepsort_simple"
path = "examples/deepsort_simple.rs"
required-features = ["std"]

[dev-dependencies]
# Testing dependencies

[dependencies.ndarray]
version = "0.17.1"
optional = true

[dependencies.opencv]
version = "0.98.0"
optional = true

[dependencies.ort]
version = "2.0.0-rc.10"
features = ["ndarray"]
optional = true

[dependencies.usls]
version = "0.1.10"
features = ["rtdetr"]
optional = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
