[build-system]
requires = ["maturin>=0.14,<1.15"]
build-backend = "maturin"

[project]
name = "trackforge"
requires-python = ">=3.7"
description = "A unified, high-performance computer vision tracking library."
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]
authors = [{ name = "Onuralp Sezer", email = "thunderbirdtr@gmail.com" }]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
]


[tool.maturin]
features = ["python"]
include = ["python/trackforge.pyi"]
